--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,16 +15,35 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  Logintodockerhub:
     runs-on: ubuntu-latest
     environment: dev
+  # This workflow contains a single job called "build"
+ 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+      - name: docker llogin
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: registry-1.docker.io
+          username: ${{secrets.DOCKERHUBUSERNAME}}
+          password: ${{secrets.DOCKERHUBPASSWORD}}
+
+    Logintodockerhub:
+      runs-on: ubuntu-latest
+      environment: QA
+      steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+      - name: docker llogin
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: registry-1.docker.io
+          username: ${{secrets.DOCKERHUBUSERNAME}}
+          password: ${{secrets.DOCKERHUBPASSWORD}}
      
 
       # Runs a single command using the runners shell
