--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
-
+ 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -9,37 +7,28 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  Logintodockerhub:
+  lint:
     runs-on: ubuntu-latest
-    environment: dev
-  # This workflow contains a single job called "build"
- 
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-      - name: docker llogin
-        uses: docker/login-action@v2.1.0
-        with:
-          registry: registry-1.docker.io
-          username: ${{secrets.DOCKERHUBUSERNAME}}
-          password: ${{secrets.DOCKERHUBPASSWORD}}
-
-  
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - uses: actions/checkout@v2
+      - run: echo "Hello world"
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: echo "Hello world"
+  publish:
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+    steps:
+      - uses: actions/checkout@v2
+      - run: echo "Hello world"
+  test1:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: $
+    steps:
+      - uses: actions/checkout@v2
+      - run: echo "hello Test"
