--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,3 +1,5 @@
+# This is a basic workflow to help you get started with Actions
+ 
 name: CI
  
 # Controls when the workflow will run
@@ -7,28 +9,41 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+ 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+ 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  lint:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: Dev
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v2
-      - run: echo "Hello world"
+      - name: print 
+        run: echo "hello"
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: echo "Hello world"
-  publish:
+      - name: download git code 
+        run: git clone https://github.com/SanketGit27/AccTraining.git
+      - name: list of files 
+        run: pwd && ls   
+  demo:
     runs-on: ubuntu-latest
-    needs: [lint, test]
+    needs: [build, test]
     steps:
-      - uses: actions/checkout@v2
-      - run: echo "Hello world"
-  test1:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: $
+      - name: download git code 
+        run: git clone https://github.com/SanketGit27/AccTraining.git
+      - name: list of files 
+        run: pwd && ls   
+  demo2:
+    runs-on: ubuntu-latest
+    needs: [build]
     steps:
-      - uses: actions/checkout@v2
-      - run: echo "hello Test"
+      - name: download git code 
+        run: git clone https://github.com/SanketGit27/AccTraining.git
+      - name: list of files 
+        run: pwd && ls   
